WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202508
[GTK] WebGL backed by ANGLE flickers when USE_OPENGL_ES is enabled.
https://bugs.webkit.org/show_bug.cgi?id=202508
Summary
[GTK] WebGL backed by ANGLE flickers when USE_OPENGL_ES is enabled.
ChangSeok Oh
Reported
2019-10-02 22:40:43 PDT
This is a series of patches to add ANGLE as webgl backend to the GTK port. This fix needs the patch of
Bug 199060
as a pre-condition. In 199060, the change brings ANGLE webgl to gtk port that has glx graphics backend. This bug will handle ANGLE webgl support where ENABLE_GLES is activated.
Attachments
Patch
(3.49 KB, patch)
2019-11-29 00:40 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2019-11-29 00:40:33 PST
Created
attachment 384482
[details]
Patch
Zan Dobersek
Comment 2
2019-12-18 07:17:30 PST
Comment on
attachment 384482
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=384482&action=review
> Source/WebCore/platform/graphics/nicosia/texmap/NicosiaGC3DLayer.cpp:115 > - auto texture = BitmapTextureGL::create(TextureMapperContextAttributes::get(), m_context.m_internalColorFormat); > + auto texture = BitmapTextureGL::create(TextureMapperContextAttributes::get(), flags, m_context.m_internalColorFormat);
Ooof, good fix.
ChangSeok Oh
Comment 3
2019-12-18 08:48:29 PST
Comment on
attachment 384482
[details]
Patch Thanks for your review!
WebKit Commit Bot
Comment 4
2019-12-18 09:38:25 PST
Comment on
attachment 384482
[details]
Patch Clearing flags on attachment: 384482 Committed
r253691
: <
https://trac.webkit.org/changeset/253691
>
WebKit Commit Bot
Comment 5
2019-12-18 09:38:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug