[GTK] WebGL backed by ANGLE flickers when USE_OPENGL_ES is enabled. https://bugs.webkit.org/show_bug.cgi?id=202508

Reviewed by Žan Doberšek.

The color format and internal one of BitmapTextureGL cannot be matched
where USE_ANGLE_WEBGL and USE_OPENGL_ES are enabled simultaneously.
This causes the flickering issue on WebGL scene since it prevents TextureMapper
from recycling available layer buffers due to mismatched color format.
When ANGLE_WEBGL is enabled, the internal color format is set GL_RGBA8.
However, that is not compatible to GLES textures. To address this,
We always make the color format of BitmapTextureGL GL_RGBA,
and only set its internal color format with a given value.

No new tests since no functionality changed.

* platform/graphics/nicosia/texmap/NicosiaGC3DLayer.cpp:
(Nicosia::GC3DLayer::swapBuffersIfNeeded):
* platform/graphics/texmap/BitmapTextureGL.cpp:
(WebCore::BitmapTextureGL::BitmapTextureGL):


Canonical link: https://commits.webkit.org/218595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253691 268f45cc-cd09-0410-ab3c-d52691b4dbfc