Source/WebCore/platform/graphics/texmap/BitmapTextureGL.cpp
@@ -63,13 +63,14 @@ BitmapTextureGL* toBitmapTextureGL(BitmapTexture* texture)
 
 BitmapTextureGL::BitmapTextureGL(const TextureMapperContextAttributes& contextAttributes, const Flags, GLint internalFormat)
     : m_contextAttributes(contextAttributes)
+    , m_format(GL_RGBA)
 {
     if (internalFormat != GL_DONT_CARE) {
-        m_internalFormat = m_format = internalFormat;
+        m_internalFormat = internalFormat;
         return;
     }
 
-    m_internalFormat = m_format = GL_RGBA;
+    m_internalFormat = GL_RGBA;
 }
 
 void BitmapTextureGL::didReset()
